# rust-api

./: Cargo.toml
migrations/: 20250528124338_create_items.sql
src/: lib.rs  main.rs
src/config/: mod.rs
src/database/: connection.rs  mod.rs
src/handlers/: item_handlers.rs  mod.rs
src/models/: item.rs
src/routes/: item_routes.rs  mod.rs
src/services/: item_service.rs  mod.rs
