[package]
name = "simple-api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.0-rc.1"
tokio = { version = "1", features = ["full"]}
serde = { version = "1.0", features = ["derive"]}
sqlx = { version = "0.8.2", features = ["postgres", "runtime-tokio-native-tls", "uuid", "derive"]}
dotenv = "0.15"